manifest/whoami.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: whoami
spec:
  selector:
    matchLabels:
      # has to match .spec.template.metadata.labels
      app: whoami 
  serviceName: whoami
  replicas: 2
  minReadySeconds: 10
  template:
    metadata:
      labels:
        # has to match .spec.selector.matchLabels
        app: whoami 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - name: web
          containerPort: 80
  #       volumeMounts:
  #       - name: data
  #         mountPath: /var/lib/cometd
  # volumeClaimTemplates:
  # - metadata:
  #     name: data
  #   spec:
  #     accessModes: ["ReadWriteOnce"]
  #     storageClassName: "longhorn-static"
  #     resources:
  #       requests:
  #         storage: 32Gi
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  clusterIP: None
  selector:
    app: whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-0
  labels:
    statefulset.kubernetes.io/pod-name: whoami-0
spec:
  ports:
  - protocol: TCP
    port: 8060
    targetPort: 80
  selector:
    statefulset.kubernetes.io/pod-name: whoami-0
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-1
  labels:
    statefulset.kubernetes.io/pod-name: whoami-1
spec:
  ports:
  - protocol: TCP
    port: 8060
    targetPort: 80
  selector:
    statefulset.kubernetes.io/pod-name: whoami-1
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`us-east-1a.hostedsrv.net`, `*.us-east-1a.hostedsrv.net`)
    kind: Rule
    services:
    - name: whoami-0
      port: 8060
  - match: Host(`us-east-1b.hostedsrv.net`, `*.us-east-1b.hostedsrv.net`)
    kind: Rule
    services:
    - name: whoami-1
      port: 8060
